--- a/.github/workflows/security.yaml
+++ b/.github/workflows/security.yaml
@@ -28,7 +28,7 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
 
       - name: scan dependencies
-        run: clojure -Sdeps "{:deps {io.github.clj-holmes/clj-watson {:git/tag \"v3.0.2-ALPHA\" :git/sha \"1a56cdf\"}}}" -M -m clj-watson.cli scan -p resources/vulnerable-deps.edn --fail-on-result -o sarif -s -t github-advisory > /tmp/report.sarif
+        run: clojure -Sdeps "{:deps {io.github.clj-holmes/clj-watson {:git/tag \"v3.0.2-ALPHA\" :git/sha \"1a56cdf\"}}}" -M -m clj-watson.cli scan -p deps.edn -o sarif -s -t github-advisory > /tmp/report.sarif
 
       - uses: github/codeql-action/upload-sarif@v1
         with: 
