--- a/.github/workflows/security.yaml
+++ b/.github/workflows/security.yaml
@@ -28,10 +28,14 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
 
       - name: scan dependencies
-        run: clojure -Sdeps "{:deps {io.github.clj-holmes/clj-watson {:git/tag \"v3.0.2-ALPHA\" :git/sha \"1a56cdf\"}}}" -M -m clj-watson.cli scan -p deps.edn -o sarif -s -t github-advisory > /tmp/report.sarif
+        run: clojure -Sdeps "{:deps {io.github.clj-holmes/clj-watson {:git/tag \"v3.0.2-ALPHA\" :git/sha \"1a56cdf\"}}}" -M -m clj-watson.cli scan -p deps.edn -o sarif -s -t github-advisory > results.sarif
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: github/codeql-action/upload-sarif@v1
-        with: 
-          sarif_file: /tmp/report.sarif
+        with:
+          # Path to SARIF file relative to the root of the repository
+          sarif_file: results.sarif
+          # Optional category for the results
+          # Used to differentiate multiple results for one commit
+          category: clj-watson
